err/webstack.err
Listing '.'...
Listing './bin'...
Compiling './bin/webstack_apache_config.py'...
***   File "./bin/webstack_apache_config.py", line 65
    print "Please specify either CGI or mod_python as the application type."
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/webstack_java_build.py'...
***   File "./bin/webstack_java_build.py", line 14
    print "Copying", source, "to", destination
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebStack'...
Listing './lib/python3.5/site-packages/WebStack/Adapters'...
Compiling './lib/python3.5/site-packages/WebStack/Adapters/Django.py'...
***   File "./lib/python3.5/site-packages/WebStack/Adapters/Django.py", line 70
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebStack/Adapters/Helpers'...
Compiling './lib/python3.5/site-packages/WebStack/Adapters/Helpers/wsgi_cgi.py'...
***   File "./lib/python3.5/site-packages/WebStack/Adapters/Helpers/wsgi_cgi.py", line 49
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/WebStack/Adapters/Twisted.py'...
***   File "./lib/python3.5/site-packages/WebStack/Adapters/Twisted.py", line 49
    raise NotImplementedError, "getChild"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/WebStack/Generic.py'...
***   File "./lib/python3.5/site-packages/WebStack/Generic.py", line 240
    raise NotImplementedError, "get_server_name"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebStack/Helpers'...
Compiling './lib/python3.5/site-packages/WebStack/Helpers/Request.py'...
***   File "./lib/python3.5/site-packages/WebStack/Helpers/Request.py", line 155
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/WebStack/Helpers/Session.py'...
***   File "./lib/python3.5/site-packages/WebStack/Helpers/Session.py", line 153
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebStack/Repositories'...
Compiling './lib/python3.5/site-packages/WebStack/Repositories/Directory.py'...
***   File "./lib/python3.5/site-packages/WebStack/Repositories/Directory.py", line 122
    raise ValueError, key
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebStack/Resources'...
Compiling './lib/python3.5/site-packages/WebStack/Webware.py'...
***   File "./lib/python3.5/site-packages/WebStack/Webware.py", line 345
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebStack-1.2.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
